[gd_scene load_steps=9 format=3 uid="uid://g1y668ftpdlu"]

[ext_resource type="Script" path="res://Data/Fish/predator_fish.gd" id="1_vjev5"]
[ext_resource type="Texture2D" uid="uid://krxkmxjhalhm" path="res://Assets/Air_Back.png" id="2_p050b"]
[ext_resource type="Texture2D" uid="uid://i8v8oxawx1pw" path="res://Assets/UI/AirInO2Gaige.png" id="3_wott6"]
[ext_resource type="Texture2D" uid="uid://byy7xsgdvlwqp" path="res://Assets/Partciles/bloodParticleOutline.png" id="4_6mejb"]
[ext_resource type="Texture2D" uid="uid://d0h0xeed4bwab" path="res://Assets/Partciles/BubbleParticles.png" id="5_avuf6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtnho"]
resource_local_to_scene = true
radius = 8.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_65ytg"]
resource_local_to_scene = true
radius = 160.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_70dxy"]
load_path = "res://.godot/imported/Piranha.png-a98854fb50640834208fd2f302cab48f.ctex"

[node name="Fish" type="RigidBody2D"]
texture_filter = 1
gravity_scale = 0.0
contact_monitor = true
can_sleep = false
script = ExtResource("1_vjev5")

[node name="Back" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 0.501961)
texture_filter = 1
offset_left = 7.0
offset_top = -9.0
offset_right = 10.0
offset_bottom = 6.0
rotation = 1.5708
texture = ExtResource("2_p050b")
expand_mode = 1

[node name="Progress" type="TextureProgressBar" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("3_wott6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.3, 0.3)
shape = SubResource("CapsuleShape2D_mtnho")

[node name="DetectFish" type="Area2D" parent="."]
scale = Vector2(0.3, 0.3)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectFish"]
shape = SubResource("CircleShape2D_65ytg")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = SubResource("CompressedTexture2D_70dxy")

[node name="OutOfRangeTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BitePosition" type="Node2D" parent="."]
position = Vector2(7, 0)

[node name="StressTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShowHealthTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="Blood" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
lifetime = 1.5
one_shot = true
explosiveness = 0.5
randomness = 1.0
texture = ExtResource("4_6mejb")
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 6.0
initial_velocity_max = 6.0
scale_amount_min = 0.05
scale_amount_max = 0.2

[node name="Bubbles" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
lifetime = 1.5
one_shot = true
explosiveness = 0.5
randomness = 1.0
texture = ExtResource("5_avuf6")
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 6.0
initial_velocity_max = 6.0
scale_amount_min = 0.05
scale_amount_max = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectFish" to="." method="_on_detect_fish_body_entered"]
[connection signal="body_exited" from="DetectFish" to="." method="_on_detect_fish_body_exited"]
[connection signal="timeout" from="OutOfRangeTimer" to="." method="_on_out_of_range_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="StressTimer" to="." method="_on_stress_timer_timeout"]
